--- a/config/install/field.field.node.landing_page.field_related_links.yml
+++ b/config/install/field.field.node.landing_page.field_related_links.yml
@@ -12,7 +12,7 @@ field_name: field_related_links
 entity_type: node
 bundle: landing_page
 label: 'Related links'
-description: 'Related links display under the site-section navigation.'
+description: 'Select Add Related links to display links under the right hand side navigation.'
 required: false
 translatable: false
 default_value: {  }
