--- a/config/install/paragraphs.paragraphs_type.keydates.yml
+++ b/config/install/paragraphs.paragraphs_type.keydates.yml
@@ -4,5 +4,5 @@ dependencies: {  }
 id: keydates
 label: Key dates
 icon_uuid: null
-description: ''
+description: 'Add this card to feature important dates. Add a date, title, summary and link.'
 behavior_plugins: {  }
