--- a/config/install/core.entity_form_display.paragraph.data_table.default.yml
+++ b/config/install/core.entity_form_display.paragraph.data_table.default.yml
@@ -2,28 +2,22 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.data_table.field_number_of_columns
-    - field.field.paragraph.data_table.field_number_of_rows
+    - field.field.paragraph.data_table.field_data_table_content
     - field.field.paragraph.data_table.field_row_oriented_table
     - paragraphs.paragraphs_type.data_table
+  module:
+    - tablefield
 id: paragraph.data_table.default
 targetEntityType: paragraph
 bundle: data_table
 mode: default
 content:
-  field_number_of_columns:
-    weight: 2
-    settings:
-      placeholder: ''
-    third_party_settings: {  }
-    type: number
-    region: content
-  field_number_of_rows:
+  field_data_table_content:
     weight: 1
     settings:
-      placeholder: ''
+      input_type: textfield
     third_party_settings: {  }
-    type: number
+    type: tablefield
     region: content
   field_row_oriented_table:
     weight: 0
