--- a/config/install/core.entity_view_display.paragraph.data_table.default.yml
+++ b/config/install/core.entity_view_display.paragraph.data_table.default.yml
@@ -2,32 +2,24 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.data_table.field_number_of_columns
-    - field.field.paragraph.data_table.field_number_of_rows
+    - field.field.paragraph.data_table.field_data_table_content
     - field.field.paragraph.data_table.field_row_oriented_table
     - paragraphs.paragraphs_type.data_table
+  module:
+    - tablefield
 id: paragraph.data_table.default
 targetEntityType: paragraph
 bundle: data_table
 mode: default
 content:
-  field_number_of_columns:
-    weight: 2
-    label: above
-    settings:
-      thousand_separator: ''
-      prefix_suffix: true
-    third_party_settings: {  }
-    type: number_integer
-    region: content
-  field_number_of_rows:
+  field_data_table_content:
     weight: 1
     label: above
     settings:
-      thousand_separator: ''
-      prefix_suffix: true
+      row_header: true
+      column_header: false
     third_party_settings: {  }
-    type: number_integer
+    type: tablefield
     region: content
   field_row_oriented_table:
     weight: 0
