--- a/config/install/field.field.paragraph.data_table.field_first_column_table_header.yml
+++ b/config/install/field.field.paragraph.data_table.field_first_column_table_header.yml
@@ -2,19 +2,19 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_row_oriented_table
+    - field.storage.paragraph.field_first_column_table_header
     - paragraphs.paragraphs_type.data_table
-id: paragraph.data_table.field_row_oriented_table
-field_name: field_row_oriented_table
+id: paragraph.data_table.field_first_column_table_header
+field_name: field_first_column_table_header
 entity_type: paragraph
 bundle: data_table
-label: 'Row oriented'
+label: 'Use first column as table header'
 description: ''
 required: false
 translatable: false
 default_value:
   -
-    value: 1
+    value: 0
 default_value_callback: ''
 settings:
   on_label: 'On'
