--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "dev-feature/SDPA-5028-data-table-component as 2.0.4",
+        "dpc-sdp/tide_core": "^2.0.0",
         "dpc-sdp/tide_event": "^1.3.1",
         "dpc-sdp/tide_media": "^1.5.1"
     },
