[SDPA-5028] Updated CI build fix.

--- a/config/optional/jsonapi_extras.jsonapi_resource_config.paragraph--data_table.yml
+++ b/config/optional/jsonapi_extras.jsonapi_resource_config.paragraph--data_table.yml
@@ -98,9 +98,21 @@ resourceFields:
     enhancer:
       id: ''
     disabled: false
-  field_row_oriented_table:
-    fieldName: field_row_oriented_table
-    publicName: field_row_oriented_table
+  field_first_column_table_header:
+    fieldName: field_first_column_table_header
+    publicName: field_first_column_table_header
+    enhancer:
+      id: ''
+    disabled: false
+  field_first_row_table_header:
+    fieldName: field_first_row_table_header
+    publicName: field_first_row_table_header
+    enhancer:
+      id: ''
+    disabled: false
+  field_table_orientation:
+    fieldName: field_table_orientation
+    publicName: field_table_orientation
     enhancer:
       id: ''
     disabled: false
