Updated UI of Landing page node form. (#124)
* Updated widget of header and content component field, form layout of Landing Page and cms improvement work.

--- a/config/install/field.field.node.landing_page.field_featured_image.yml
+++ b/config/install/field.field.node.landing_page.field_featured_image.yml
@@ -9,8 +9,8 @@ id: node.landing_page.field_featured_image
 field_name: field_featured_image
 entity_type: node
 bundle: landing_page
-label: 'Feature Image'
-description: ''
+label: 'Feature image'
+description: 'Feature images don''t display on this page. They display in promotion card or navigation card and links to this page. One image can be added and must be 496px high x 818px wide.'
 required: false
 translatable: true
 default_value: {  }
