--- a/config/install/field.field.node.landing_page.field_show_whats_next.yml
+++ b/config/install/field.field.node.landing_page.field_show_whats_next.yml
@@ -8,8 +8,8 @@ id: node.landing_page.field_show_whats_next
 field_name: field_show_whats_next
 entity_type: node
 bundle: landing_page
-label: 'Show What''s Next?'
-description: ''
+label: 'Show What''s next?'
+description: 'Check this box to display links on this page.'
 required: false
 translatable: false
 default_value:
