--- a/config/install/paragraphs.paragraphs_type.keydates.yml
+++ b/config/install/paragraphs.paragraphs_type.keydates.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: keydates
-label: Keydates
+label: Key dates
 icon_uuid: null
-description: ''
+description: 'Add this card to feature important dates. Add a date, title, summary and link.'
 behavior_plugins: {  }
