--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -12,6 +12,7 @@ dependencies:
   - drupal:node
   - drupal:path
   - drupal:text
+  - drupal:tablefield
   - drupal:telephone
   - drupal:user
   - dpc-sdp:tide_core
