--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -54,6 +54,8 @@ config_devel:
     - core.entity_form_display.paragraph.media_gallery.default
     - core.entity_form_display.paragraph.hero_banner_with_cta.default
     - core.entity_form_display.paragraph.introduction_banner.default
+    - core.entity_form_display.paragraph.data_table.default
+    - core.entity_view_display.paragraph.data_table.default
     - core.entity_view_display.block_content.media_gallery.default
     - core.entity_view_display.block_content.campaign_with_video.default
     - core.entity_view_display.node.landing_page.card
@@ -146,6 +148,11 @@ config_devel:
     - field.field.paragraph.card_event.field_paragraph_summary
     - field.field.paragraph.card_event.field_paragraph_title
     - field.field.paragraph.card_keydates.field_paragraph_cta
+    - field.field.paragraph.data_table.field_data_table_content
+    - field.field.paragraph.data_table.field_first_column_table_header
+    - field.field.paragraph.data_table.field_first_row_table_header
+    - field.field.paragraph.data_table.field_item_description
+    - field.field.paragraph.data_table.field_table_orientation
     - field.field.paragraph.card_keydates.field_paragraph_keydates
     - field.field.paragraph.card_navigation.field_paragraph_link
     - field.field.paragraph.card_navigation.field_paragraph_summary
@@ -238,6 +245,7 @@ config_devel:
     - field.storage.node.field_show_hero_image_caption
     - field.storage.paragraph.field_paragraph_background_image
     - field.storage.paragraph.field_paragraph_body
+    - field.storage.paragraph.field_data_table_content
     - field.storage.paragraph.field_paragraph_cta_card_event
     - field.storage.paragraph.field_paragraph_cta_style
     - field.storage.paragraph.field_paragraph_cta_text
@@ -300,6 +308,7 @@ config_devel:
     - paragraphs.paragraphs_type.phone
     - paragraphs.paragraphs_type.social_link
     - paragraphs.paragraphs_type.timelines
+    - paragraphs.paragraphs_type.data_table
   optional:
     - core.entity_form_display.paragraph.embedded_webform.default
     - core.entity_form_display.paragraph.featured_news.default
