Added missing dependency tablefield.
On-behalf-of: @salsadigitalauorg <sonny@salsadigital.com.au>

--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -23,6 +23,7 @@ dependencies:
   - maxlength:maxlength
   - paragraphs:paragraphs
   - smart_trim:smart_trim
+  - tablefield:tablefield
 config_devel:
   install:
     - block_content.type.campaign
