--- a/config/install/core.entity_form_display.paragraph.data_table.default.yml
+++ b/config/install/core.entity_form_display.paragraph.data_table.default.yml
@@ -5,6 +5,8 @@ dependencies:
     - field.field.paragraph.data_table.field_data_table_content
     - field.field.paragraph.data_table.field_first_column_table_header
     - field.field.paragraph.data_table.field_first_row_table_header
+    - field.field.paragraph.data_table.field_paragraph_summary
+    - field.field.paragraph.data_table.field_paragraph_title
     - field.field.paragraph.data_table.field_table_orientation
     - paragraphs.paragraphs_type.data_table
   module:
@@ -26,13 +28,29 @@ third_party_settings:
         description: ''
         required_fields: true
       label: Headers
+    group_content:
+      children:
+        - field_paragraph_title
+        - field_paragraph_summary
+        - field_data_table_content
+      parent_name: ''
+      weight: 2
+      format_type: fieldset
+      region: content
+      format_settings:
+        show_empty_fields: false
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Content
 id: paragraph.data_table.default
 targetEntityType: paragraph
 bundle: data_table
 mode: default
 content:
   field_data_table_content:
-    weight: 2
+    weight: 5
     settings:
       input_type: textfield
     third_party_settings: {  }
@@ -51,6 +69,22 @@ content:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
+    region: content
+  field_paragraph_summary:
+    weight: 4
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textarea
+    region: content
+  field_paragraph_title:
+    weight: 3
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_table_orientation:
     weight: 0
