--- a/config/optional/jsonapi_extras.jsonapi_resource_config.node--landing_page.yml
+++ b/config/optional/jsonapi_extras.jsonapi_resource_config.node--landing_page.yml
@@ -418,3 +418,11 @@ resourceFields:
     disabled: false
     advancedOptionsIcon: ''
     enhancer_label: ''
+  field_side_bar_links:
+    fieldName: field_side_bar_links
+    publicName: field_side_bar_links
+    enhancer:
+      id: ''
+    disabled: false
+    advancedOptionsIcon: ''
+    enhancer_label: ''
