--- a/config/install/core.entity_view_display.node.landing_page.default.yml
+++ b/config/install/core.entity_view_display.node.landing_page.default.yml
@@ -29,6 +29,7 @@ dependencies:
     - field.field.node.landing_page.field_show_table_of_content
     - field.field.node.landing_page.field_show_topic_term_and_tags
     - field.field.node.landing_page.field_show_whats_next
+    - field.field.node.landing_page.field_side_bar_links
     - field.field.node.landing_page.field_tags
     - field.field.node.landing_page.field_topic
     - field.field.node.landing_page.field_whats_next
@@ -231,6 +232,15 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
+  field_side_bar_links:
+    type: entity_reference_revisions_entity_view
+    weight: 27
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
     region: content
   field_tags:
     weight: 5
