--- a/config/install/core.entity_view_display.node.landing_page.featured_card.yml
+++ b/config/install/core.entity_view_display.node.landing_page.featured_card.yml
@@ -17,6 +17,7 @@ dependencies:
     - field.field.node.landing_page.field_show_related_content
     - field.field.node.landing_page.field_show_social_sharing
     - field.field.node.landing_page.field_show_whats_next
+    - field.field.node.landing_page.field_side_bar_links
     - field.field.node.landing_page.field_tags
     - field.field.node.landing_page.field_topic
     - field.field.node.landing_page.field_whats_next
@@ -80,6 +81,7 @@ hidden:
   field_show_table_of_content: true
   field_show_topic_term_and_tags: true
   field_show_whats_next: true
+  field_side_bar_links: true
   field_tags: true
   field_topic: true
   field_whats_next: true
