--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -125,6 +125,7 @@ config_devel:
     - field.field.node.landing_page.field_show_related_content
     - field.field.node.landing_page.field_show_social_sharing
     - field.field.node.landing_page.field_show_whats_next
+    - field.field.node.landing_page.field_side_bar_links
     - field.field.node.landing_page.field_show_table_of_content
     - field.field.node.landing_page.field_tags
     - field.field.node.landing_page.field_topic
