--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -243,6 +243,7 @@ config_devel:
     - field.storage.node.field_show_ack_of_country
     - field.storage.node.field_show_c_primary_caption
     - field.storage.node.field_show_hero_image_caption
+    - field.storage.node.field_side_bar_links
     - field.storage.paragraph.field_paragraph_background_image
     - field.storage.paragraph.field_paragraph_bg_colour
     - field.storage.paragraph.field_paragraph_body
