--- a/config/install/node.type.landing_page.yml
+++ b/config/install/node.type.landing_page.yml
@@ -11,9 +11,9 @@ third_party_settings:
     parent: 'main:'
   wysiwyg_template:
     default_template: ''
-name: 'Landing Page'
+name: 'Standard Page'
 type: landing_page
-description: 'Use <em>Landing Page</em> content type for custom landing pages.'
+description: 'Use <em>Standard Page</em> content type for custom standard pages.'
 help: ''
 new_revision: true
 preview_mode: 1
