--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -46,6 +46,7 @@ config_devel:
     - core.entity_form_display.paragraph.card_promotion.default
     - core.entity_form_display.paragraph.card_promotion_auto.default
     - core.entity_form_display.paragraph.complex_image.default
+    - core.entity_form_display.paragraph.custom_component.default
     - core.entity_form_display.paragraph.embedded_search_form.default
     - core.entity_form_display.paragraph.form_embed_openforms.default
     - core.entity_form_display.paragraph.key_journeys.default
@@ -55,6 +56,7 @@ config_devel:
     - core.entity_form_display.paragraph.media_gallery.default
     - core.entity_form_display.paragraph.hero_banner_with_cta.default
     - core.entity_form_display.paragraph.introduction_banner.default
+    - core.entity_form_display.taxonomy_term.custom_components.default
     - core.entity_view_display.block_content.media_gallery.default
     - core.entity_view_display.block_content.campaign_with_video.default
     - core.entity_view_display.node.landing_page.card
@@ -75,6 +77,7 @@ config_devel:
     - core.entity_view_display.paragraph.card_promotion_auto.default
     - core.entity_view_display.paragraph.card_promotion.default
     - core.entity_view_display.paragraph.complex_image.default
+    - core.entity_view_display.paragraph.custom_component.default
     - core.entity_view_display.paragraph.embedded_search_form.default
     - core.entity_view_display.paragraph.form_embed_openforms.default
     - core.entity_view_display.paragraph.hero_banner_with_cta.default
@@ -90,6 +93,7 @@ config_devel:
     - core.entity_view_display.paragraph.news_listing.default
     - core.entity_view_display.paragraph.phone.default
     - core.entity_view_display.paragraph.social_link.default
+    - core.entity_view_display.taxonomy_term.custom_components.default
     - field.field.block_content.campaign.body
     - field.field.block_content.campaign.field_block_cta
     - field.field.block_content.campaign.field_block_image
@@ -174,6 +178,8 @@ config_devel:
     - field.field.paragraph.complex_image.field_complex_image_media
     - field.field.paragraph.complex_image.field_complex_image_source
     - field.field.paragraph.complex_image.field_complex_image_title
+    - field.field.paragraph.custom_component.field_paragraph_custom_component
+    - field.field.paragraph.custom_component.field_paragraph_options
     - field.field.paragraph.embedded_search_form.field_paragraph_search_block
     - field.field.paragraph.embedded_search_form.field_paragraph_search_ph
     - field.field.paragraph.embedded_search_form.field_paragraph_search_target
@@ -215,6 +221,8 @@ config_devel:
     - field.field.paragraph.phone.field_paragraph_phone_title
     - field.field.paragraph.social_link.field_paragraph_link
     - field.field.paragraph.social_link.field_paragraph_social_list
+    - field.field.taxonomy_term.custom_components.field_default_options
+    - field.field.taxonomy_term.custom_components.field_machine_name
     - field.storage.block_content.field_block_cta
     - field.storage.block_content.field_block_image
     - field.storage.block_content.field_block_title
@@ -249,6 +257,7 @@ config_devel:
     - field.storage.paragraph.field_complex_image_media
     - field.storage.paragraph.field_complex_image_source
     - field.storage.paragraph.field_complex_image_title
+    - field.storage.paragraph.field_paragraph_custom_component
     - field.storage.paragraph.field_form_link
     - field.storage.paragraph.field_paragraph_date
     - field.storage.paragraph.field_paragraph_freetext
@@ -261,6 +270,7 @@ config_devel:
     - field.storage.paragraph.field_paragraph_keydates
     - field.storage.paragraph.field_paragraph_topic
     - field.storage.paragraph.field_paragraph_email
+    - field.storage.paragraph.field_paragraph_options
     - field.storage.paragraph.field_paragraph_name
     - field.storage.paragraph.field_paragraph_news_reference
     - field.storage.paragraph.field_paragraph_phone_number
@@ -273,6 +283,8 @@ config_devel:
     - field.storage.paragraph.field_paragraph_social_list
     - field.storage.paragraph.field_paragraph_social_media
     - field.storage.paragraph.field_paragraph_webform
+    - field.storage.taxonomy_term.field_default_options
+    - field.storage.taxonomy_term.field_machine_name
     - node.type.landing_page
     - paragraphs.paragraphs_type.banner
     - paragraphs.paragraphs_type.basic_text
@@ -297,10 +309,12 @@ config_devel:
     - paragraphs.paragraphs_type.latest_events
     - paragraphs.paragraphs_type.media_gallery
     - paragraphs.paragraphs_type.contact_us
+    - paragraphs.paragraphs_type.custom_component
     - paragraphs.paragraphs_type.news_listing
     - paragraphs.paragraphs_type.phone
     - paragraphs.paragraphs_type.social_link
     - paragraphs.paragraphs_type.timelines
+    - taxonomy.vocabulary.custom_components
   optional:
     - core.entity_form_display.paragraph.embedded_webform.default
     - core.entity_form_display.paragraph.featured_news.default
@@ -319,6 +333,7 @@ config_devel:
     - jsonapi_extras.jsonapi_resource_config.paragraph--card_navigation
     - jsonapi_extras.jsonapi_resource_config.paragraph--card_navigation_featured
     - jsonapi_extras.jsonapi_resource_config.paragraph--card_promotion
+    - jsonapi_extras.jsonapi_resource_config.paragraph--custom_component
     - jsonapi_extras.jsonapi_resource_config.paragraph--featured_news
     - jsonapi_extras.jsonapi_resource_config.paragraph--form_embed_openforms
     - jsonapi_extras.jsonapi_resource_config.paragraph-.hero_banner_with_cta
