Added basic text enhancer.

--- a/config/optional/jsonapi_extras.jsonapi_resource_config.paragraph--basic_text.yml
+++ b/config/optional/jsonapi_extras.jsonapi_resource_config.paragraph--basic_text.yml
@@ -148,7 +148,7 @@ resourceFields:
     fieldName: field_paragraph_body
     publicName: field_paragraph_body
     enhancer:
-      id: ''
+      id: 'basic_text_enhancer'
     disabled: false
     advancedOptionsIcon: ''
     enhancer_label: ''
