--- a/composer.json
+++ b/composer.json
@@ -4,15 +4,15 @@
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "^2.0.10",
-        "dpc-sdp/tide_event": "^1.3.1",
-        "dpc-sdp/tide_media": "^1.5.1"
+        "dpc-sdp/tide_core": "^3.0.0",
+        "dpc-sdp/tide_event": "^3.0.0",
+        "dpc-sdp/tide_media": "^3.0.0"
     },
     "suggest": {
-        "dpc-sdp/tide_api:^1.2.6": "Allows to use Drupal in headless mode",
-        "dpc-sdp/tide_webform:^1.2.4": "Allows to use questionnaires",
-        "dpc-sdp/tide_news:^1.1.5": "News content type and related configuration for Tide Drupal 8 distribution",
-        "dpc-sdp/tide_automated_listing:^1.0@beta": "Allows to use tide automated listing"
+        "dpc-sdp/tide_api:^3.0.0": "Allows to use Drupal in headless mode",
+        "dpc-sdp/tide_webform:^3.0.0": "Allows to use questionnaires",
+        "dpc-sdp/tide_news:^3.0.0": "News content type and related configuration for Tide Drupal 8 distribution",
+        "dpc-sdp/tide_automated_listing:1.0.7-beta": "Allows to use tide automated listing"
     },
     "repositories": {
         "drupal": {
