--- a/config/install/core.entity_form_display.paragraph.statistics_grid.default.yml
+++ b/config/install/core.entity_form_display.paragraph.statistics_grid.default.yml
@@ -21,7 +21,8 @@ content:
       edit_mode: open
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: statistic_block
+      default_paragraph_count: 2
     third_party_settings: {  }
     region: content
   field_statistics_grid_theme:
