--- a/demo_content/content/tide_landing_page/landing_page_cc_1.yml
+++ b/demo_content/content/tide_landing_page/landing_page_cc_1.yml
@@ -12,6 +12,8 @@
           - workflow: editorial
             moderation_state: published
   # Page header.
+  field_publication_date:
+      - value: '2036-07-01T23:00:00'
   field_featured_image:
     - '#process':
         callback: reference
@@ -346,8 +348,6 @@
           - taxonomy_term
           - vid: sites
             name: 'Demo Site'
-  # field_publication_date:
-  #   - value: '2050-07-01T23:00:00'
 # Create menu links.
 - entity: menu_link_content
   title: Demo Landing Page
