--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -15,6 +15,7 @@ dependencies:
   - drupal:telephone
   - drupal:user
   - dpc-sdp:tide_core
+  - dpc-sdp:tide_api
   - dpc-sdp:tide_event
   - dpc-sdp:tide_media
   - address:address
