[SDPA-6247] Added tide content collection in dependencies.

--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -15,7 +15,7 @@ dependencies:
   - drupal:telephone
   - drupal:user
   - dpc-sdp:tide_core
-  - dpc-sdp:tide_api
+  - dpc-sdp:tide_content_collection
   - dpc-sdp:tide_event
   - dpc-sdp:tide_media
   - address:address
