--- a/config/install/field.field.node.landing_page.field_show_table_of_content.yml
+++ b/config/install/field.field.node.landing_page.field_show_table_of_content.yml
@@ -8,8 +8,8 @@ id: node.landing_page.field_show_table_of_content
 field_name: field_show_table_of_content
 entity_type: node
 bundle: landing_page
-label: 'Show table of contents?'
-description: 'The table of contents is automatically built from the heading structure of your page.'
+label: 'Show table of contents'
+description: 'The table of contents displays a page''s heading structure (i.e. H2 and H3), with anchor links to jump down to the content.'
 required: false
 translatable: true
 default_value:
