--- a/config/install/field.field.paragraph.promotion_card.field_promo_card_display_style.yml
+++ b/config/install/field.field.paragraph.promotion_card.field_promo_card_display_style.yml
@@ -15,8 +15,7 @@ description: ''
 required: true
 translatable: false
 default_value:
-  -
-    value: thumbnail
+  - noImage
 default_value_callback: ''
 settings: {  }
 field_type: list_string
