--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,7 +117,11 @@ workflows:
   main:
     jobs:
       - build
-      - build_suggest
+      - build_suggest:
+          filters:
+            branches:
+              ignore:
+                - reference
 
   mergetoreference:
     jobs:
