--- a/config/install/field.field.block_content.media_gallery.field_topic.yml
+++ b/config/install/field.field.block_content.media_gallery.field_topic.yml
@@ -2,6 +2,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - block_content.type.campaign_with_video
     - block_content.type.media_gallery
     - field.storage.block_content.field_topic
     - taxonomy.vocabulary.topic
