--- a/config/install/field.field.block_content.media_gallery.field_topic.yml
+++ b/config/install/field.field.block_content.media_gallery.field_topic.yml
@@ -24,5 +24,5 @@ settings:
       field: name
       direction: asc
     auto_create: true
-    auto_create_bundle: ''
+    auto_create_bundle: 'topic'
 field_type: entity_reference
