[SDPAP-7642] KYC contact us new social list value.

--- a/config/install/field.storage.paragraph.field_paragraph_social_list.yml
+++ b/config/install/field.storage.paragraph.field_paragraph_social_list.yml
@@ -25,6 +25,9 @@ settings:
     -
       value: youtube_channel
       label: Youtube channel
+    -
+      value: website
+      label: Website
   allowed_values_function: ''
 module: options
 locked: false
