--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "^3.0.1",
+        "dpc-sdp/tide_core": "dev-feature/SDPAP-7613-kyc-contact-us-block-remove-restriction-items-added",
         "dpc-sdp/tide_event": "^3.0.0",
         "dpc-sdp/tide_media": "^3.0.9"
     },
