--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "GPL-2.0-or-later",
     "require": {
         "dpc-sdp/tide_core": "dev-feature/SDPAP-7613-kyc-contact-us-block-remove-restriction-items-added",
-        "dpc-sdp/tide_event": "^3.0.0",
-        "dpc-sdp/tide_media": "^3.0.9"
+        "dpc-sdp/tide_event": "dev-reference",
+        "dpc-sdp/tide_media": "dev-reference"
     },
     "suggest": {
         "dpc-sdp/tide_api:^3.0.8": "Allows to use Drupal in headless mode",
